[project]
name = "acm-research-poc"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["src"]

[tool.ty.src]
include = ["src"]
