[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibroid-cavity-classification"
version = "0.1.0"
description = "Fibroid cavity-contact classification from uterine MRI segmentation masks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "nibabel>=5.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
xgboost = ["xgboost>=2.0"]
interpretability = ["shap>=0.46"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
